.metadata/.plugins/org.eclipse.cdt.ui/txxx.build.log
10:43:23 **** Incremental Build of configuration Debug for project txxx ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c: In function 'HAL_ADC_ConvCpltCallback':
../Core/Src/main.c:66:7: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   66 |       printf("X Value : %d\r\n", value);
      |       ^~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:66:7: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   66 |       printf("X Value : %d\r\n", value);
      |       ^~~~~~
../Core/Src/main.c:66:7: note: include '<stdio.h>' or provide a declaration of 'printf'
In file included from ../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f411xe.h:140,
                 from ../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:154,
                 from ../Core/Src/system_stm32f4xx.c:48:
../Core/Src/system_stm32f4xx.c: In function 'SystemInit':
../Drivers/CMSIS/Include/core_cm4.h:1564:29: error: missing binary operator before token "("
 1564 | #define SCB                 ((SCB_Type       *)     SCB_BASE      )   /*!< SCB configuration struct */
      |                             ^
../Core/Src/system_stm32f4xx.c:170:52: note: in expansion of macro 'SCB'
  170 |   #if (__FPU_PRESENT == 1) && (__FPU_USED == 1)    SCB->CPACR |= ((3UL << 10*2)|(3UL << 11*2));  /* set CP10 and CP11 Full Access */
      |                                                    ^~~
make: *** [Core/Src/subdir.mk:34: Core/Src/system_stm32f4xx.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

10:43:23 Build Failed. 3 errors, 2 warnings. (took 570ms)

